--- a/src/packages/components/field/field.scss
+++ b/src/packages/components/field/field.scss
@@ -33,7 +33,8 @@
   }
 
   &__icon {
-    display: block;
-    margin-left: 15rpx;
+    font-size: 18px;
+    color: #c8c9cc;
+    margin-left: 8px;
   }
 }
