--- a/src/packages/components/notice-bar/notice-bar.scss
+++ b/src/packages/components/notice-bar/notice-bar.scss
@@ -37,9 +37,8 @@
     white-space: nowrap;
   }
 
-  &__right-icon {
-    font-size: 0;
-    font-weight: bold;
+  &__left-icon, &__right-icon {
+    font-size: _var(notice-bar-icon-size, 16px);
   }
 
   &--wrapable {
