--- a/src/packages/components/search/search.scss
+++ b/src/packages/components/search/search.scss
@@ -3,6 +3,7 @@
   @include _setVar(field-input-color, _var(color-black));
   @include _setVar(number-input-placeholder-color, #c8c9cc);
   @include _setVar(cell-bg-color, transparent);
+  @include _setVar(cell-title-color, _var(color-black-3));
   @include _setVar(cell-padding-x, 8px);
   @include _setVar(cell-padding-y, 8px);
   padding: _var(search-padding, 10px 12px);
