--- a/src/packages/components/list-item/list-item.scss
+++ b/src/packages/components/list-item/list-item.scss
@@ -6,6 +6,11 @@
   padding: 10px 16px;
   font-size: 14px;
   line-height: 24px;
+  
+  &__icon {
+    font-size: 16px;
+    color: _var(color-primary);
+  }
 
   &--selected {
     color: _var(color-primary);
