--- a/src/packages/components/uploader/uploader.scss
+++ b/src/packages/components/uploader/uploader.scss
@@ -32,7 +32,7 @@
       height: _var(uploader-delete-height, 15%);
       background-color: _var(uploader-delete-bg, rgba(0, 0, 0, 0.7));
       border-radius: 0 _var(uploader-preview-radius, 4px) 0 12px;
-      @include _setVar(icon-size, _var(uploader-delete-icon-size, 12px));
+      font-size: _var(uploader-delete-icon-size, 12px);
 
       &-icon {
         position: absolute;
