--- a/src/packages/components/watermark/watermark.scss
+++ b/src/packages/components/watermark/watermark.scss
@@ -3,8 +3,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
+  right: 0;
+  bottom: 0;
+  background-repeat: repeat;
   pointer-events: none;
+
+  &--full-page {
+    position: fixed;
+  }
 }
