--- a/src/packages/components/loadmore/loadmore.scss
+++ b/src/packages/components/loadmore/loadmore.scss
@@ -5,8 +5,13 @@
   height: 40px;
   align-items: center;
   justify-content: center;
+
   &__text {
     font-size: 14px;
     margin-left: 8px;
+  }
+
+  &--full-page {
+    height: 100%;
   }
 }
