feat: popup add 'contentClass'

--- a/src/packages/components/popup/popup.scss
+++ b/src/packages/components/popup/popup.scss
@@ -3,6 +3,7 @@
   &__content {
     position: relative;
     background-color: #fff;
+    border-radius: _var(popup-radius, 0);
   }
 
   &__close {
