--- a/src/packages/components/search/search.scss
+++ b/src/packages/components/search/search.scss
@@ -1,16 +1,16 @@
 @import '../../styles/vars.scss';
 .#{$prefix}-search {
-  @include _setVar(field-input-color, _var(color-black));
+  @include _setVar(field-input-color, _var(search-input-color, _var(color-black)));
   @include _setVar(cell-bg-color, transparent);
-  @include _setVar(cell-title-color, _var(color-black-3));
-  @include _setVar(cell-padding-x, 8px);
-  @include _setVar(cell-padding-y, 8px);
+  @include _setVar(cell-title-color, _var(search-icon-color, _var(color-black-3)));
+  @include _setVar(cell-padding-x, _var(search-input-padding-x, 8px));
+  @include _setVar(cell-padding-y, _var(search-input-padding-y, 8px));
   padding: _var(search-padding, 10px 12px);
   background-color: _var(search-bg-color, #fff);
   &-input {
     flex: 1;
     background-color: _var(search-input-bg-color, _var(color-gray));
-    border-radius: 3px;
+    border-radius: _var(search-input-radius, 3px);
   }
   &--round &-input {
     border-radius: 100px;
