refactor: replace ':active' with 'hover-class'

--- a/src/packages/components/input-number/input-number.scss
+++ b/src/packages/components/input-number/input-number.scss
@@ -19,7 +19,7 @@
     height: $height;
     font-size: 16px;
     background-color: $bgColor;
-    &:active:not(.#{$prefix}-input-number-icon--disabled) {
+    &--hover {
       background-color: #e8e8e8;
     }
   }
